--- a/vol1/ch3/springframeProj_3.3/pom.xml
+++ b/vol1/ch3/springframeProj_3.3/pom.xml
@@ -1,11 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>springFrameProj_2.3.5</groupId>
-  <artifactId>springFrameProj_2.3.5</artifactId>
+  <groupId>springframeProj_3.3</groupId>
+  <artifactId>springframeProj_3.3</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
-  <dependencies>
-  
+	<dependencies>
   		<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
 		<dependency>
  			  <groupId>org.springframework</groupId>
@@ -49,6 +48,6 @@
   			 <version>2.2.224</version>
   			 <!-- <scope>test</scope> -->
 		</dependency>
-		
+
 	</dependencies>
 </project>
